fix spacing between btn and buttonDropdown

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -520,7 +520,8 @@ span[data-tooltip]:hover:before {
   }
 }
 
-.btn + .btn {
+.btn + .btn,
+.btn + .buttonDropdown {
   margin-left: 10px;
 }
 
